# hierarchical-memory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHARTER.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE.txt  DOCKSIDE-EXAM.md  EXTRACTION_SUMMARY.md  INSTALLATION.md  MANIFEST.in  Makefile  PACKAGING_FILES_CREATED.md  PACKAGING_SUMMARY.md  README.md  SECURITY.md  TEST_STRUCTURE.txt  TEST_SUITE_SUMMARY.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml  publish.yml  test.yml  validate.yml
docs/: COMPLETE_GUIDE.md
examples/: basic_usage.py  vector_search_example.py
hierarchical_memory/: __init__.py  consolidation.py  episodic_memory.py  memory_types.py  procedural_memory.py  retrieval.py  semantic_memory.py  working_memory.py
hierarchical_memory/consolidation/: pipeline.py
hierarchical_memory/core/: episodic.py  procedural.py  semantic.py  working.py
hierarchical_memory/retrieval/: search.py
hierarchical_memory/sharing/: protocol.py
src/: hierarchical_memory.py
src/hierarchical_memory/: __init__.py  consolidation.py  core.py  identity.py  vector_store.py
tests/: README.md  __init__.py  conftest.py  test_consolidation.py  test_episodic_memory.py  test_integration.py  test_procedural_memory.py  test_retrieval.py  test_semantic_memory.py  test_sharing.py  test_working_memory.py
