[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hierarchical-memory"
version = "0.1.0"
description = "6-tier hierarchical memory system for AI agents inspired by cognitive neuroscience"
readme = "README.md"
authors = [
    {name = "Extracted from DMLog", email = "noreply@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "memory",
    "ai",
    "agent",
    "cognitive-science",
    "hierarchical-memory",
    "consolidation",
    "vector-search",
    "qdrant",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/hierarchical-memory"
Documentation = "https://github.com/SuperInstance/hierarchical-memory#readme"
Repository = "https://github.com/SuperInstance/hierarchical-memory"
Issues = "https://github.com/SuperInstance/hierarchical-memory/issues"

[project.optional-dependencies]
# Vector database support
qdrant = ["qdrant-client>=1.7.0"]
# Embedding models
embeddings = ["sentence-transformers>=2.2.2"]
# Machine learning (for advanced consolidation)
ml = ["scikit-learn>=1.3.0", "numpy>=1.24.0"]
# All optional dependencies
all = [
    "hierarchical-memory[qdrant,embeddings,ml]",
]
# Development
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hierarchical_memory = ["py.typed"]

# ============================================================================
# Development Tools
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
